--- a/css/default.css
+++ b/css/default.css
@@ -1,1 +1,29 @@
+@charset "utf-8"
+  
+  *{
+    margin: 0;
+    padding: 0;
+}
 
+body{
+  background-color: red;
+}
+
+header{
+  padding: 10px;
+  text-align: center;
+  background-color: green;
+}
+section{
+  padding: 10px;
+  background-color: red;
+}
+aside{
+  padding: 10px;
+  background-color: white;
+}
+footer{
+  padding: 10px;
+  background-color: yellow;
+  text-align: center;
+}
