--- a/css/default.css
+++ b/css/default.css
@@ -7,6 +7,7 @@
 
 body{
   background-color: purple;
+  font-family: 'Poor Story', cursive
 }
 
 header{
@@ -28,6 +29,18 @@ footer{
   text-align: center;
 }
 
+@media screen and(oientation:portrait){
+  body:after{
+    content: "縦長";
+  }
+}
+
+@media screen and(oientation:landscape)
+  body:after{
+    content: "横長";
+  }
+}
+
 @media screen and(min-width:641px){
   aside{
     width: calc(50% - 20px);
@@ -39,3 +52,26 @@ footer{
     clear:both;
   }
 }
+
+@media screen and (min-width:1025px){
+  #main{
+    max-width: 1024px;
+    margin: auto;
+  }
+  section{
+    width: calc(70% - 20px);
+    float:left;
+  }
+  #side{
+    width: calc(1024px - 718px);
+    float:left;
+  }
+  aside{
+    width: calc(100% - 20px);
+  }
+  #main:after{
+    content:"";
+    display:block;
+    clear:both;
+  }
+  
